# red

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
.github/workflows/ISSUES_TEMPLATE/: bug_report.md  feature_request.md  question.md
assets/: default-keymap.toml  default-settings.toml
crates/red/: Cargo.toml  build.rs
crates/red-acp/: Cargo.toml
crates/red-acp/examples/: spike.rs
crates/red-acp/src/: auth.rs  conversation.rs  lib.rs  types.rs
crates/red-acp/tests/: acp_turn.rs
crates/red-ai/: Cargo.toml
crates/red-ai/src/: anthropic.rs  lib.rs  types.rs
crates/red-config/: Cargo.toml
crates/red-config/src/: config.rs  lib.rs  secrets.rs
crates/red-core/: Cargo.toml
crates/red-core/src/: diff.rs  doc.rs  kv.rs  lib.rs  typemap.rs
crates/red-driver/: Cargo.toml
crates/red-driver/src/: clickhouse.rs  conformance.rs  doc.rs  format.rs  import.rs  kv.rs  lib.rs  mongo.rs  mysql.rs  pg_text.rs  plan.rs  postgres.rs  redis_kv.rs  sqlite.rs
crates/red-driver/src/redis_kv/: mod.rs  parse.rs  topology.rs
crates/red-service/: Cargo.toml
crates/red-service/assets/: README.md  report-charts.js  report-renderer.js
crates/red-service/src/: acp.rs  ai.rs  audit.rs  dispatch.rs  lib.rs  mcp.rs  protocol.rs  proxy.rs  tests.rs  tunnel.rs  update.rs
crates/red-service/src/dispatch/: connect.rs  jobs.rs  mod.rs  paging.rs  schema_cmds.rs  session.rs
crates/red/resources/: Info.plist  red.desktop  red.entitlements
crates/red/src/: app.rs  assets.rs  assistant.rs  changelog.rs  columns_panel.rs  config.rs  connect.rs  conversations.rs  decode.rs  dev_stats.rs  diff_view.rs  docbrowse.rs  editor.rs  env.rs  er.rs  filter.rs  find.rs  gridwindow.rs  history.rs  history_panel.rs  icons.rs  inspector.rs  key_meta.rs  keymap.rs  keymap_config.rs  kvbrowse.rs  kvconsole.rs  kvkeyspace.rs  kvmonitor.rs  kvpubsub.rs  local_state.rs  main.rs  markdown.rs  menu.rs  palette.rs  plan.rs  queries.rs  recent_keys.rs  redis_analysis.rs  reset.rs  (+12 more)
crates/red/src/app/: connect.rs  form.rs  import_ui.rs  keymap_edit.rs  mod.rs  render.rs  settings.rs  switcher.rs  tabs.rs  types.rs
crates/red/src/assistant/: mod.rs  render.rs  state.rs  text.rs
crates/red/src/cli/: copy.rs  format.rs  mcp.rs  mod.rs  sql_split.rs
crates/red/src/docbrowse/: form.rs  mod.rs  render.rs  tabs.rs  window.rs
crates/red/src/import/: datagrip.rs  dbeaver.rs  dbgate.rs  discover.rs  mod.rs  plain.rs  redisinsight.rs
crates/red/src/import/fixtures/: generate.js
crates/red/src/import/fixtures/dbeaver/: credentials-config.json  data-sources.json
crates/red/src/import/fixtures/dbgate/: .key  connections.jsonl
crates/red/src/kvbrowse/: analysis.rs  inspector.rs  mod.rs  render.rs  tabs.rs
crates/red/src/result/: autoscroll.rs  buffer.rs  copy.rs  edit.rs  mod.rs  render.rs  suggest.rs
docs/: conventions.md  deferred.md  keyboard.md  release-macos.md
sample/: README.md  sample.db  sample.sql
scripts/: bundle-linux.sh  bundle-mac.sh  bundle-windows.ps1  check-linux.sh  make-icns.sh  sign-mac.sh
