[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.16.0"
edition = "2021"
rust-version = "1.96"
license = "GPL-3.0-or-later"
repository = "https://github.com/vojir-mikulas/red"
authors = ["vojir-mikulas <vojir.mikulas@gmail.com>"]

[workspace.dependencies]
# --- GPUI (pinned to the SAME Zed rev as Flint and Nyx) ---
# This rev is a shared contract: Cargo unifies two git deps only at the same
# URL+rev, so RED must resolve gpui to exactly this rev (Flint re-exports it as
# `flint::gpui`) or it gets a second, incompatible gpui copy. Bumping is a
# coordinated event across flint + nyx + red. Per-OS features live in consuming
# crates because Cargo features are additive.
gpui = { git = "https://github.com/zed-industries/zed", rev = "137e677a0561eb7284cfad1bedccea70155e2473", default-features = false }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "137e677a0561eb7284cfad1bedccea70155e2473", default-features = false }

# --- Shared UI (the extracted in-house component library) ---
# Pinned by rev so a fresh clone builds without a sibling checkout. Flint pins
# gpui to the SAME rev as above; Cargo unifies the two git deps only at a
# matching URL+rev, so bumping Flint is coordinated with the gpui pin. For local
# Flint+RED work, override with a `[patch]` or a path dep.
flint = { git = "https://github.com/vojir-mikulas/flint", rev = "c1704c7329eaeaf0755103e5da9be241e27ebeec" }

# --- Async / backend bridge (mirrors Nyx: Tokio backend ↔ GPUI over channels) ---
tokio = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"

# --- Database drivers ---
# v0.1 target: SQLite (bundled C lib, no system dep) + PostgreSQL.
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
tokio-postgres = "0.7"
# MySQL / MariaDB — pure-Rust async client (no system libmysqlclient).
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
futures-util = { version = "0.3", default-features = false }
# SSH tunnels for jump-host DB connections — pure-Rust client (no system libssh),
# bundles key parsing, known_hosts checks, and an ssh-agent client.
russh = "0.61"
# Redis/Valkey — the KvDriver seam (docs/plans/redis.md), not one more
# DatabaseDriver arm. `tokio-rustls-comp` (not separate tokio-comp+tls-rustls
# — that pair alone is missing the tokio-rustls glue and fails to build) gives
# the async multiplexed connection plus TLS (`rediss://`) over the same
# pure-Rust stack reqwest/mysql_async already use. cluster-async/sentinel land
# with R1's cluster-aware scan cursor, not before.
redis = { version = "1", default-features = false, features = ["tokio-rustls-comp"] }
# Already in the tree via redis' own URL parsing; used by the Redis driver to
# rebuild per-master cluster DSNs (host+port swap, credentials/scheme/TLS
# preserved) without hand-rolling URL surgery.
url = "2"

# --- Subscription assistant via ACP (red-acp) ---
# Drives Claude Code as an external agent over the Agent Client Protocol so the
# user's Pro/Max subscription grounds the assistant (the agent owns auth/billing;
# Red never touches the OAuth tokens). Pinned exactly to the rev Zed uses;
# independent of the gpui pin, so the cross-repo gpui contract is unaffected.
agent-client-protocol = "=0.14.0"
# Splits a configured agent command string into argv the same way the ACP SDK's
# `AcpAgent::from_str` does, so Red can run the agent's bundled CLI (`--cli auth
# …`) for subscription sign-in / "who is logged in" with identical quoting rules.
shell-words = "1"
# The subscription assistant grounds the agent through a localhost MCP server Red
# hosts (the agent advertises `mcp_capabilities.http`, not `acp`). hyper/hyper-util
# are already in the tree via reqwest, so this adds no new dependency subtree; the
# loopback server is plaintext (no TLS) behind a per-session bearer nonce.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
# Random per-session MCP bearer nonce + ACP/MCP ids (already compiled via the ACP
# crate's tree).
uuid = { version = "1", features = ["v4"] }

# --- AI assistant provider (red-ai) ---
# HTTP client for the Claude Messages API (SSE streaming). rustls-tls reuses the
# same pure-Rust TLS stack the MySQL driver already pulls — no native-TLS / system
# OpenSSL surface enters the build.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# --- Config persistence (connection list at the app edge) ---
serde = { version = "1", features = ["derive"] }
# Reads one GitHub Releases API response in the self-updater (red-service); kept
# minimal so the updater takes no heavyweight HTTP dependency (it shells curl).
serde_json = "1"
toml = "0.8"
dirs = "5"
# SQL beautifier for the editor's Format action. Pinned to the 0.2 line so it
# reuses the `nom 7` already in the tree (0.3+ drops nom for its own parser);
# the only new transitive dep is the tiny `unicode-categories`.
sqlformat = "0.2"
# OS keychain for connection credentials — passwords never hit connections.toml.
# Backend features are additive and per-OS, so the consuming crate selects them
# per target (see crates/red/Cargo.toml); the public API is backend-agnostic.
keyring = "3"

# --- Connection import (decrypt DBeaver / DBGate credential stores) ---
# DBeaver ships an AES-128-CBC credentials file (hardcoded key); DBGate encrypts
# each field with node's `simple-encryptor` (AES-256-CBC + SHA-256 key +
# HMAC-SHA256). Pure-Rust RustCrypto — no OpenSSL / native crypto enters the build.
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
# Wipes cached plaintext credentials from memory on drop (see secrets.rs cache).
zeroize = "1"

# --- CLI (headless mode: `red query|exec|copy|migrate …`) ---
clap = { version = "4", features = ["derive"] }

# --- Errors / logging ---
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- Embedded assets (fonts baked into the binary) ---
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

# --- Live config reload (watch settings.toml, re-apply without a restart) ---
notify = "6"

# --- Internal crates ---
red-core = { path = "crates/red-core" }
red-config = { path = "crates/red-config" }
red-driver = { path = "crates/red-driver" }
red-service = { path = "crates/red-service" }
red-ai = { path = "crates/red-ai" }
red-acp = { path = "crates/red-acp" }

[profile.dev]
# GPUI's dep tree is large; a touch of opt on deps keeps debug builds usable.
[profile.dev.package."*"]
opt-level = 2

# Local Flint+RED development: to build against a sibling `../flint` checkout so
# changes in both repos compile together, add (do NOT commit) a patch to your
# local Cargo.toml — a fresh clone must build from the pinned git rev above:
#
#   [patch."https://github.com/vojir-mikulas/flint"]
#   flint = { path = "../flint" }

# [patch."https://github.com/vojir-mikulas/flint"]
# flint = { path = "../flint" }

