[package]
name = "red-acp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# The Agent Client Protocol SDK — drives an external coding agent (Claude Code in
# ACP mode) as a subprocess and speaks JSON-RPC over its stdio. `unstable` matches
# the rev Zed pins, and unlocks auth methods, MCP-over-ACP, and end-of-turn token
# usage. Independent of the gpui pin, so the cross-repo gpui contract is untouched.
agent-client-protocol = { workspace = true, features = ["unstable"] }
# Shared domain vocabulary for the agent-activity timeline (ActivityKind/Status,
# PlanStep). Pure data, no gpui/runtime, so the cross-repo gpui pin is untouched.
red-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
# `process`/`io-util`/`time` drive the agent's bundled CLI for subscription auth
# (`--cli auth status|login|logout`): spawn it, parse its stdout, feed the pasted
# OAuth code to its stdin, all with timeouts. `sync`/`rt`/`macros` as before.
tokio = { workspace = true, features = ["sync", "rt", "macros", "process", "io-util", "time"] }
# Parse the `auth status --json` payload (login state / email / subscription).
serde = { workspace = true }
serde_json.workspace = true
# Split the configured agent command into argv (same rules as the ACP SDK).
shell-words.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
