# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "red-core"
description = "RED shared domain types — no UI or runtime knowledge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
