# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "red-core"
description = "RED shared domain types — no UI or runtime knowledge."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
# Data-only serde derives for persistence at the app edge. Off by default so the
# core stays dependency-light; the app turns it on.
serde = ["dep:serde"]

[lints]
workspace = true
