# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "red-driver"
description = "RED database driver abstraction (DatabaseDriver) + the SQLite implementation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
red-core.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
rusqlite.workspace = true
tokio-postgres.workspace = true
mysql_async.workspace = true
futures-util.workspace = true
# ClickHouse driver — its HTTP interface (no heavy native-protocol client). reqwest
# (rustls) and serde_json are already in the tree via red-ai; uuid (already pulled
# by the ACP crate's subtree) gives each query a stable id for `KILL QUERY`.
reqwest.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "sync", "macros", "time"] }
