# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "red-service"
description = "RED backend: a Tokio thread that owns DB sessions and talks to the UI over Command/Event channels."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
red-core.workspace = true
red-driver.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "macros", "time", "net", "io-util"] }
futures.workspace = true
tracing.workspace = true
serde_json.workspace = true
# SSH tunnels (jump-host connections) — pure-Rust client, no system libssh.
russh.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "sync", "macros", "time"] }
# Used only by tests to populate a fixture DB the service then introspects.
rusqlite.workspace = true
