# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "red"
description = "RED — Roughly Enough Data. A fast, simple database explorer. The GPUI application binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "red"

[[bin]]
name = "red"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
flint.workspace = true
anyhow.workspace = true
rust-embed.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Backend + domain types. `serde` on red-core powers config persistence, which
# lives at the app edge (config.rs).
red-core = { workspace = true, features = ["serde"] }
red-service.workspace = true
futures.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true

# macOS uses font-kit (CoreText) for font loading; Windows/Linux use GPUI's own
# backend. Features are additive, so this only adds to the base workspace deps.
[target.'cfg(target_os = "macos")'.dependencies]
gpui = { workspace = true, features = ["font-kit"] }
gpui_platform = { workspace = true, features = ["font-kit"] }

[target.'cfg(target_os = "linux")'.dependencies]
gpui = { workspace = true, features = ["x11", "wayland"] }
gpui_platform = { workspace = true, features = ["x11", "wayland"] }
