# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "red"
description = "RED — Roughly Enough Data. A fast, simple database explorer. The GPUI application binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "Red"

# Capitalised on purpose: with no `.app` bundle, macOS derives the bold
# app-menu title from the executable's filename, so naming the binary "Red"
# makes the top bar read "Red" instead of the lowercase crate name. The package
# stays `red` — `cargo run -p red` still picks this up via `default-run`.
[[bin]]
name = "Red"
path = "src/main.rs"

[features]
# Dev-only performance instrumentation. Off by default, so a normal `cargo run`
# / release build carries zero overhead. Enable to install the counting global
# allocator and the on-screen perf HUD (toggle with ⌥⌘P):
#   cargo run --release --features dev-stats
# Measure on an *optimized* build; debug timings are several× slower and lie.
dev-stats = []

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
flint.workspace = true
anyhow.workspace = true
rust-embed.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Backend + domain types. `serde` on red-core powers config persistence, which
# lives at the app edge (config.rs).
red-core = { workspace = true, features = ["serde"] }
red-service.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
notify.workspace = true
zeroize.workspace = true

# Connection import: decrypt DBeaver (AES-128-CBC) and DBGate (simple-encryptor:
# AES-256-CBC + SHA-256 key + HMAC-SHA256) credential stores. See src/import/.
aes.workspace = true
cbc.workspace = true
sha2.workspace = true
hmac.workspace = true
base64.workspace = true
hex.workspace = true

# macOS uses font-kit (CoreText) for font loading; Windows/Linux use GPUI's own
# backend. Features are additive, so this only adds to the base workspace deps.
# The keychain backend is also chosen per-OS here (Cargo features being additive,
# the backend can't be picked in the workspace dep without leaking to every
# platform): macOS → Keychain, Windows → Credential Manager, Linux → freedesktop
# Secret Service over D-Bus (`crypto-rust` keeps the encrypted session pure-Rust,
# so no OpenSSL native dep leaks into a portable Linux build).
[target.'cfg(target_os = "macos")'.dependencies]
gpui = { workspace = true, features = ["font-kit"] }
gpui_platform = { workspace = true, features = ["font-kit"] }
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
gpui = { workspace = true, features = ["x11", "wayland"] }
gpui_platform = { workspace = true, features = ["x11", "wayland"] }
keyring = { workspace = true, features = ["sync-secret-service", "crypto-rust"] }
